--- a/dashboard/app/globals.css
+++ b/dashboard/app/globals.css
@@ -28,3 +28,7 @@ body {
   background: var(--background);
   font-family: Arial, Helvetica, sans-serif;
 }
+
+.level {
+  background: var(--other-green)
+}
