--- a/dashboard/app/globals.css
+++ b/dashboard/app/globals.css
@@ -15,11 +15,28 @@
   --highlight: rgb(46, 204, 113);
   --highlight: rgb(26, 240, 115);
   --background: rgb(0, 0, 0);
-  --card-background: white;
-  --text: black;
-  --faded-text: gray;
-  --border-color: gray;
-  --border-radius: 1em;
+  --background: #08090a;
+  --card-background: rgb(13, 13, 13);
+  --card-background: rgb(14, 14, 14);
+  --card-background: #101213;
+  --inverted-text: black;
+  --bold-text: white;
+  --text: white;
+  --text: #F7F8F8;
+  --text-tinted: #ededed;
+  --text-muted: gray;
+  --text-muted2: #5d5d5d;
+  --text-muted3: #666;
+  --text-muted4: #8a8f98;
+  --border-color: rgb(22, 22, 22);
+  --border-color: rgb(34, 34, 34);
+  --border-color: rgb(35, 37, 42);
+  --border-radius: 0.3rem;
+  --hover-background: rgb(34, 34, 34);
+  --warn: #ff644b;
+  --warn: rgb(255, 170, 75);
+  --error: rgb(255, 80, 80);
+  --info: rgb(0, 191, 255);
 }
 
 @media (prefers-color-scheme: light) {
@@ -38,7 +55,7 @@ body {
 }
 
 .level {
-  background: var(--other-green);
+  background: var(--highlight);
   background: oklch(0.928 0.006 264.531);
   background: oklch(0.967 0.003 264.542);
   background: rgb(255, 80, 80);
@@ -50,8 +67,13 @@ body {
   border: 1px solid var(--border-color);
 }
 
+.card > h2 {
+  font-size: 14px;
+  color: var(--text);
+}
+
 /* .level-10 {
-  background: var(--other-green);
+  background: var(--highlight);
 }
 
 .level-9 {
@@ -91,7 +113,7 @@ body {
 } */
 
 .level-10 {
-  background: var(--other-green);
+  background: var(--highlight);
 }
 
 .level-9 {
@@ -163,4 +185,24 @@ body {
 
 .level-none {
   background: oklch(0.967 0.003 264.542);
+  background: rgb(49, 49, 49);
+}
+
+.spinner {
+  border: 4px solid rgb(45, 45, 45);
+  border-top: 4px solid rgb(70, 70, 70);
+  border-radius: 50%;
+  width: 25px;
+  height: 25px;
+  animation: spin 0.8s linear infinite;
+}
+
+@keyframes spin {
+  0% {
+    transform: rotate(0deg);
+  }
+
+  100% {
+    transform: rotate(360deg);
+  }
 }
